--- a/templates/west_end_market/category_page.html
+++ b/templates/west_end_market/category_page.html
@@ -21,35 +21,41 @@
             <a class="dropdown-item" href="{% url 'show_category' category_name 'price' %}">Price (Ascending)</a>
             <a class="dropdown-item" href="{% url 'show_category' category_name 'date' %}">Date (Oldest-Newest)</a>
         </div>
-        {% for listing in listings|dictsort:sort_by %}
-        <div class="row margin-top-10">
-            <div class="col-md-2">
-                <div class="text-center">
-                    <div>
-                        <a href="{% url 'show_listing' listing.id %}"><img id="myImg" src="{{listing.picture.url}}" class="photo-fit photo-fit-mobile round-edges" alt="item image"></a>
+        {% if listings %}
+            {% for listing in listings|dictsort:sort_by %}
+                <div class="row margin-top-10">
+                    <div class="col-md-2">
+                        <div class="text-center">
+                            <div>
+                                <a href="{% url 'show_listing' listing.id %}"><img id="myImg" src="{{listing.picture.url}}" class="photo-fit photo-fit-mobile round-edges" alt="item image"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-box text-box-mobile col-md-9">
+                        <div class="row">
+                            <span><strong>Title: </strong>{{listing.title}}</span>
+                        </div>
+                        <div class="row">
+                            <span><strong>Price: </strong>{{listing.price}}</span>
+                        </div>
+                        <div class="row">
+                            <span><strong>Postcode: </strong>{{listing.postcode}}</span>
+                        </div>
+                        <div class="row">
+                            <span><strong>User: </strong><a class="text-decoration-none" href="{% url 'user_profile' listing.user.username %}">{{listing.user.username}}</a></span>
+                        </div>
+                        <div class="row">
+                            <span><strong>Date: </strong>{{listing.date.date}}</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="text-box text-box-mobile col-md-9">
-                <div class="row">
-                    <span><strong>Title: </strong>{{listing.title}}</span>
-                </div>
-                <div class="row">
-                    <span><strong>Price: </strong>{{listing.price}}</span>
-                </div>
-                <div class="row">
-                    <span><strong>Postcode: </strong>{{listing.postcode}}</span>
-                </div>
-                <div class="row">
-                    <span><strong>User: </strong><a class="text-decoration-none" href="{% url 'user_profile' listing.user.username %}">{{listing.user.username}}</a></span>
-                </div>
-                <div class="row">
-                    <span><strong>Date: </strong>{{listing.date.date}}</span>
-                </div>
-            </div>
-        </div>
         {% endfor %}
-    </div>
+    {% else %}
+        This category currently has no listings!
+    {% endif %}
+        
+    
 {% else %}
         <div class="alert alert-danger" role="alert">
         <span>&#10008;There is no such category. Please check the url and try again!</span>
