--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -14,7 +14,7 @@
 
 				<div class="col-md-3">
 					<div>
-						{% if profile and picture %}
+						{% if profile.picture %}
 							<img id="id_profile" class="img-fluid item-box-mobile height-240 width-240 round-edges"  src="{{ profile.picture.url}}" alt="profile picture">
 						{% else %}
 							<img id="id_profile" class="img-fluid item-box-mobile height-240 width-240 round-edges"  src="{% static 'images/profile.jpg' %}" alt="profile picture">
